--- a/recipes/vanilla-cake.html
+++ b/recipes/vanilla-cake.html
@@ -4,11 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Odin Recipes</title>
+    <title>Vanilla cake</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-
-    <a href="./recipes/vanilla-cake.html">Vanilla cake</a>
+    <h1>Vanilla cake</h1>
 </body>
 </html>
