Edited link to vanilla cake recipe in index.html

--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body>
     <h1>Odin Recipes</h1>
 
-    <a href="./recipes/vanilla-cake.html">Vanilla cake</a>
+    <a href="recipes/vanilla-cake.html">Vanilla cake</a>
 </body>
 </html>
