Added link to vanilla cake recipe which redirects to index.html or homepage

--- a/recipes/vanilla-cake.html
+++ b/recipes/vanilla-cake.html
@@ -33,5 +33,7 @@
         <li>Combine flour, cornstarch, baking powder, and salt in another bowl. Add to the creamed mixture and mix well. Stir in milk until batter is smooth. Pour or spoon batter into the prepared pan.</li>
         <li>Bake in the preheated oven until it springs back to the touch, 30 to 40 minutes.</li>
     </ol>
+
+    <a href="../index.html">Back to homepage</a>
 </body>
 </html>
