Added peanut butter cookies recipe

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1>Odin Recipes</h1>
 
     <a href="recipes/vanilla-cake.html">Vanilla cake</a>
+    <a href="recipes/peanut-butter-cookie.html">Peanut butter Cookies</a>
 </body>
 </html>
