Added pineapple upside down cupcake recipe

--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
 
     <a href="recipes/vanilla-cake.html">Vanilla cake</a>
     <a href="recipes/peanut-butter-cookie.html">Peanut butter Cookies</a>
+    <a href="recipes/Pineapple-upside-down-cupcake.html">Pineapple upside down cupcake</a>
 </body>
 </html>
