Fixed errorneous edit to peanut butter cookie recipe. Added source of recipes at the end of each recipe.

--- a/recipes/vanilla-cake.html
+++ b/recipes/vanilla-cake.html
@@ -34,6 +34,8 @@
         <li>Bake in the preheated oven until it springs back to the touch, 30 to 40 minutes.</li>
     </ol>
 
+    <p>Recipe taken from <a href="https://www.allrecipes.com/recipe/277883/homemade-vanilla-cake/" target="_blank">here</a></p>
+
     <a href="../index.html">Back to homepage</a>
 </body>
 </html>
