--- a/recipes/Pineapple-upside-down-cupcake.html
+++ b/recipes/Pineapple-upside-down-cupcake.html
@@ -37,6 +37,8 @@
         <li>Line a work surface with waxed paper. Allow cupcakes to cool at least 5 minutes before inverting muffin cups onto the waxed paper; serve with pineapple and cherry sides up. Sprinkle cupcakes lightly with confectioners' sugar before serving.</li>
     </ol>
 
+    <p>Recipe taken from <a href="https://www.allrecipes.com/recipe/220808/pineapple-upside-down-cupcakes/" target="_blank">here</a></p>
+
     <a href="../index.html">Back to homepage</a>
 </body>
 </html>
