Added style and edited html files to accomodate styling

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Odin Recipes</title>
 </head>
 <body>
@@ -11,9 +12,9 @@
 
 
     <ul>
-        <li><a href="recipes/vanilla-cake.html">Vanilla cake</a></li>
-        <li><a href="recipes/peanut-butter-cookie.html">Peanut butter Cookies</a></li>
-        <li><a href="recipes/Pineapple-upside-down-cupcake.html">Pineapple upside down cupcake</a></li>
+        <li><a href="recipes/vanilla-cake.html" class="link" target="_blank">Vanilla cake</a></li>
+        <li><a href="recipes/peanut-butter-cookie.html" class="link" target="_blank">Peanut butter Cookies</a></li>
+        <li><a href="recipes/Pineapple-upside-down-cupcake.html" class="link" target="_blank">Pineapple upside down cupcake</a></li>
     </ul>
     
     
