--- a/recipes/vanilla-cake.html
+++ b/recipes/vanilla-cake.html
@@ -4,38 +4,42 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../style.css">
     <title>Vanilla cake</title>
 </head>
 <body>
     <h1>Vanilla cake</h1>
     <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fpublic-assets.meredithcorp.io%2Fab9b4373c051ffe447325a9ff13da3ba%2F1647483514DSC08580.jpg&w=595&h=398&c=sc&poi=face&q=60" alt="vanilla cake photo">
-    <h2>Description</h2>
-    <p>Very moist and dense homemade vanilla cake.</p>
+    
+    <div class="main-text">
+        <h2>Description</h2>
+        <p>Very moist and dense homemade vanilla cake.</p>
 
-    <h3>Ingredients</h3>
-    <ul>
-        <li>1 cup white sugar</li>
-        <li>1/2 cup butter</li>
-        <li>2 eggs</li>
-        <li>1 teaspoon vanilla extract</li>
-        <li>1 teaspoon almond extract</li>
-        <li>1 1/2 cups all-purpose flour</li>
-        <li>3 tablespoons cornstarch</li>
-        <li>1 3/4 teaspoons baking powder</li>
-        <li>1/2 teaspoon salt</li>
-        <li>3/4 cup milk</li>
-    </ul>
+        <h3>Ingredients</h3>
+        <ul>
+            <li>1 cup white sugar</li>
+            <li>1/2 cup butter</li>
+            <li>2 eggs</li>
+            <li>1 teaspoon vanilla extract</li>
+            <li>1 teaspoon almond extract</li>
+            <li>1 1/2 cups all-purpose flour</li>
+            <li>3 tablespoons cornstarch</li>
+            <li>1 3/4 teaspoons baking powder</li>
+            <li>1/2 teaspoon salt</li>
+            <li>3/4 cup milk</li>
+        </ul>
 
-    <h3>Steps</h3>
-    <ol>
-        <li>Preheat the oven to 350 degrees F (175 degrees C). Grease and flour a 9x9-inch pan.</li>
-        <li>Beat sugar and butter together in a medium bowl until creamy. Beat in eggs, 1 at a time; stir in vanilla extract and almond extract.</li>
-        <li>Combine flour, cornstarch, baking powder, and salt in another bowl. Add to the creamed mixture and mix well. Stir in milk until batter is smooth. Pour or spoon batter into the prepared pan.</li>
-        <li>Bake in the preheated oven until it springs back to the touch, 30 to 40 minutes.</li>
-    </ol>
+        <h3>Steps</h3>
+        <ol>
+            <li>Preheat the oven to 350 degrees F (175 degrees C). Grease and flour a 9x9-inch pan.</li>
+            <li>Beat sugar and butter together in a medium bowl until creamy. Beat in eggs, 1 at a time; stir in vanilla extract and almond extract.</li>
+            <li>Combine flour, cornstarch, baking powder, and salt in another bowl. Add to the creamed mixture and mix well. Stir in milk until batter is smooth. Pour or spoon batter into the prepared pan.</li>
+            <li>Bake in the preheated oven until it springs back to the touch, 30 to 40 minutes.</li>
+        </ol>
 
-    <p>Recipe taken from <a href="https://www.allrecipes.com/recipe/277883/homemade-vanilla-cake/" target="_blank">here</a></p>
+        <p>Recipe taken from <a href="https://www.allrecipes.com/recipe/277883/homemade-vanilla-cake/" target="_blank">here</a></p>
 
-    <a href="../index.html">Back to homepage</a>
+        <a href="../index.html" class="link">Back to homepage</a>
+    </div>
 </body>
 </html>
