--- a/recipes/Pineapple-upside-down-cupcake.html
+++ b/recipes/Pineapple-upside-down-cupcake.html
@@ -4,41 +4,45 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../style.css">
     <title>Pineapple upside down cupcakes</title>
 </head>
 <body>
     <h1>Pineapple Upside Down Cupcakes</h1>
     <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F9425199.jpg&w=595&h=595&c=sc&poi=face&q=60">
-    <h2>Description</h2>
-    <p>These pineapple upside down cupcakes are great to make for family gatherings or as treats to pack into lunches. It's an easy recipe; adaptations can be made to make this completely from scratch. This is just a yummy simplified version!</p>
+    <div class="main-text">
+        <h2>Description</h2>
+        <p>These pineapple upside down cupcakes are great to make for family gatherings or as treats to pack into lunches. It's an easy recipe; adaptations can be made to make this completely from scratch. This is just a yummy simplified version!</p>
 
-    <h3>Ingredients</h3>
+        <h3>Ingredients</h3>
 
-    <ul>
-        <li>cooking spray</li>
-        <li>1/2 cup butter, melted</li>
-        <li>1 1/2 cups brown sugar</li>
-        <li>24 maraschino cherries</li>
-        <li>1 (20 ounce) can crushed pineapple</li>
-        <li>1 (18.25 ounce) package pineapple cake mix (such as Duncan Hines® Pineapple Supreme)</li>
-        <li>1 1/3 cups pineapple juice</li>
-        <li>1/3 cup vegetable oil</li>
-        <li>3 eggs</li>
-        <li>1 tablespoon confectioners' sugar for dusting, or as needed</li>
-    </ul>
+        <ul>
+            <li>cooking spray</li>
+            <li>1/2 cup butter, melted</li>
+            <li>1 1/2 cups brown sugar</li>
+            <li>24 maraschino cherries</li>
+            <li>1 (20 ounce) can crushed pineapple</li>
+            <li>1 (18.25 ounce) package pineapple cake mix (such as Duncan Hines® Pineapple Supreme)</li>
+            <li>1 1/3 cups pineapple juice</li>
+            <li>1/3 cup vegetable oil</li>
+            <li>3 eggs</li>
+            <li>1 tablespoon confectioners' sugar for dusting, or as needed</li>
+        </ul>
 
-    <h3>Steps</h3>
-    <ol>
-        <li>Preheat the oven to 350 degrees F (175 degrees C). Move an oven rack to the middle of the oven. Spray 24 muffin cups with cooking spray.</li>
-        <li>Spoon 1 teaspoon melted butter into the bottom of each sprayed muffin cup. Spoon 1 tablespoon brown sugar into each muffin cup. Press a maraschino cherry into the center of the brown sugar in each muffin cup. Spoon a heaping tablespoon of crushed pineapple on top and compact it with the back of a spoon into an even layer.</li>
-        <li>Mix pineapple cake mix, pineapple juice, vegetable oil, and eggs in a large bowl with an electric mixer on low speed until moistened, about 30 seconds. Increase speed to medium; mix for 2 minutes.</li>
-        <li>Pour batter into the muffin cups, filling them to the top; do not overfill.</li>
-        <li>Bake in the preheated oven until a toothpick inserted into the center of a cupcake comes out clean, about 20 minutes.</li>
-        <li>Line a work surface with waxed paper. Allow cupcakes to cool at least 5 minutes before inverting muffin cups onto the waxed paper; serve with pineapple and cherry sides up. Sprinkle cupcakes lightly with confectioners' sugar before serving.</li>
-    </ol>
+        <h3>Steps</h3>
+        <ol>
+            <li>Preheat the oven to 350 degrees F (175 degrees C). Move an oven rack to the middle of the oven. Spray 24 muffin cups with cooking spray.</li>
+            <li>Spoon 1 teaspoon melted butter into the bottom of each sprayed muffin cup. Spoon 1 tablespoon brown sugar into each muffin cup. Press a maraschino cherry into the center of the brown sugar in each muffin cup. Spoon a heaping tablespoon of crushed pineapple on top and compact it with the back of a spoon into an even layer.</li>
+            <li>Mix pineapple cake mix, pineapple juice, vegetable oil, and eggs in a large bowl with an electric mixer on low speed until moistened, about 30 seconds. Increase speed to medium; mix for 2 minutes.</li>
+            <li>Pour batter into the muffin cups, filling them to the top; do not overfill.</li>
+            <li>Bake in the preheated oven until a toothpick inserted into the center of a cupcake comes out clean, about 20 minutes.</li>
+            <li>Line a work surface with waxed paper. Allow cupcakes to cool at least 5 minutes before inverting muffin cups onto the waxed paper; serve with pineapple and cherry sides up. Sprinkle cupcakes lightly with confectioners' sugar before serving.</li>
+        </ol>
 
-    <p>Recipe taken from <a href="https://www.allrecipes.com/recipe/220808/pineapple-upside-down-cupcakes/" target="_blank">here</a></p>
+        <p>Recipe taken from <a href="https://www.allrecipes.com/recipe/220808/pineapple-upside-down-cupcakes/" target="_blank">here</a></p>
 
-    <a href="../index.html">Back to homepage</a>
+        <a href="../index.html" class="link">Back to homepage</a>
+    </div>
+    
 </body>
 </html>
