--- a/recipes/peanut-butter-cookie.html
+++ b/recipes/peanut-butter-cookie.html
@@ -4,35 +4,40 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../style.css">
     <title>Peanut Butter Cookie</title>
 </head>
 <body>
     <h1>Easy, Chewy Flourless Peanut Butter Cookies</h1>
     <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fpublic-assets.meredithcorp.io%2F40357545393b320aaca417231109a703%2F1643993916flourless%20peanut%20butter%20cookies.jpg&w=595&h=398&c=sc&poi=face&q=60" alt="peanut butter cookie photo">
-    <h2>Description</h2>
-    <p>This simple, tasty recipe yields 12 to 16 cookies, but is so simple that it can be doubled (or tripled!) easily.</p>
+    
+    <div class="main-text">
+        <h2>Description</h2>
+        <p>This simple, tasty recipe yields 12 to 16 cookies, but is so simple that it can be doubled (or tripled!) easily.</p>
 
-    <h3>Ingredients</h3>
+        <h3>Ingredients</h3>
 
-    <ul>
-        <li>1 cup peanut butter</li>
-        <li>1/2 cup white sugar</li>
-        <li>1/3 cup packed brown sugar</li>
-        <li>1 egg</li>
-        <li>1 teaspoon vanilla extract</li>
-        <li>1/2 teaspoon baking soda</li>
-        <li>1/2 cup semisweet chocolate chips (Optional)</li>
-    </ul>
+        <ul>
+            <li>1 cup peanut butter</li>
+            <li>1/2 cup white sugar</li>
+            <li>1/3 cup packed brown sugar</li>
+            <li>1 egg</li>
+            <li>1 teaspoon vanilla extract</li>
+            <li>1/2 teaspoon baking soda</li>
+            <li>1/2 cup semisweet chocolate chips (Optional)</li>
+        </ul>
 
-    <h3>Steps</h3>
-    <ol>
-        <li>Preheat oven to 350 degrees F (175 degrees C).</li>
-        <li>Beat peanut butter, white sugar, and brown sugar together in a large bowl with an electric mixer until smooth. Stir egg, vanilla extract, and baking soda into peanut butter mixture; stir in chocolate chips.</li>
-        <li>Drop mixture by small rounded spoonfuls onto a baking sheet about 2 inches apart.</li>
-        <li>Bake in the preheated oven until cookies are flattened and golden, about 8 minutes.</li>
-    </ol>
+        <h3>Steps</h3>
+        <ol>
+            <li>Preheat oven to 350 degrees F (175 degrees C).</li>
+            <li>Beat peanut butter, white sugar, and brown sugar together in a large bowl with an electric mixer until smooth. Stir egg, vanilla extract, and baking soda into peanut butter mixture; stir in chocolate chips.</li>
+            <li>Drop mixture by small rounded spoonfuls onto a baking sheet about 2 inches apart.</li>
+            <li>Bake in the preheated oven until cookies are flattened and golden, about 8 minutes.</li>
+        </ol>
 
-    <p>Recipe taken from <a href="https://www.allrecipes.com/recipe/242366/easy-chewy-flourless-peanut-butter-cookies/" target="_blank">here</a></p>
-    <a href="../index.html">Back to homepage</a>
+        <p>Recipe taken from <a href="https://www.allrecipes.com/recipe/242366/easy-chewy-flourless-peanut-butter-cookies/" target="_blank">here</a></p>
+        <a href="../index.html" class="link">Back to homepage</a>
+    </div>
+    
 </body>
 </html>
